--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,4 +1,11 @@
 <footer>
+    <div id="meta">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}. {{isnotpage /tag/*}}Last modified: {{ fill fd_mtime }}.{{end}}
+    <a type="application/rss+xml" href="/feed.xml">
+        <img src="/assets/rss.svg" alt="RSS Feed" class="rss-icon"/>
+    </a>
+    </div>
+    <div id="love">
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>, the <a href="https://julialang.org">Julia programming language</a> and <span class="heart">♥</span>!
+    </div>
 </footer>
