Add a dark mode
I've wanted to do this for a long time, and now it's done! Yay!

--- a/_layout/header.html
+++ b/_layout/header.html
@@ -2,6 +2,11 @@
 <a href="/" class="blog-name"><span>Voyage:</span><span id="title">{{title}}</span></a>
 <nav>
   <ul>
+    <li><button class="theme-toggle">
+      <div class="theme-sun">☀️</div>
+      <div class="theme-moon">🌖</div>
+    </button>
+    </li>
     <li><a href="/articles/">Articles</a></li>
     <!--<li><a href="/tag/">Tags</a></li>-->
     <li><a href="/about/">About</a></li>
