--- a/_css/style.css
+++ b/_css/style.css
@@ -1,40 +1,247 @@
 @import "fonts/fonts.css";
 
 :root {
-    --bg-color: #fbfff6;
-    --heart-color: #c5425b;
+    color-scheme: light dark;
+}
 
+/* light */
+body {
+    --bg-color: #fbfff6;
+    --blog-title: #777573;
+
+    /* Danger admonition */
     --danger-bg: #ffa6825e;
-    --danger-title-bg: #e88181;
+    --danger-title-bg: #df6f6f;
     --danger-border: #c78692;
 
+    /* Warning admonition */
     --warning-bg: #ffe9a8;
-    --warning-title-bg: #ffbe5f;
-    --warning-border: #c9a76e;
+    --warning-title-bg: #f9a62b;
+    --warning-border: #e3a43a;
 
+    /* Note admonition */
     --note-bg: #a2dbeeb5;
     --note-title-bg: #72c6fa;
     --note-border: #82b1d9;
 
-    --tip-bg: #e8f4ff;
-    --tip-title-bg: #4fa3d7;
-    --tip-border: #77b54c;
+    /* Tip admonition */
+    --tip-bg: #d5f8cf;
+    --tip-title-bg: #4fd75f;
+    --tip-border: #64c125;
 
+    /* fallback admonition */
     --generic-bg: #f0f0f0;
-    --generic-title-bg: #b5b5b5;
+    --generic-title-bg: #8a8a8a;
     --generic-border: #adadad;
 
-    --main-bg: lightgrey;
-    --main-border: lightgrey;
+    /* Code blocks */
     --code-bg: #f1f1f1f1;
     --block-background: var(--code-bg);
     --code-scroll-bg: #dae7d79c;
+
+    --h1-border: #d7d7d7;
+    --h2-border: var(--h1-border);
+
+    /* Text */
     --text-colour: #3b3b3b;
     --link-text: #67a20d;
     --link-hover: darkgrey;
     --link-active: lightgrey;
     --quote: #d0f7b92b;
+
+    /* Blinking caret */
     --caret: #73b60d;
+
+    /* footer heart */
+    --heart-color: #c5425b;
+}
+
+img {
+    filter: brightness(1) contrast(1);
+}
+
+body.dark-theme {
+    --bg-color: #042406;
+    --blog-title: #87a085;
+
+    /* Danger admonition */
+    --danger-bg: #541b05;
+    --danger-title-bg: #922626;
+    --danger-border: #720d20;
+
+    /* Warning admonition */
+    --warning-bg: #925e06;
+    --warning-title-bg: #cc6c00;
+    --warning-border: #d08303;
+
+    /* Note admonition */
+    --note-bg: #0b82a9d4;
+    --note-title-bg: #005487;
+    --note-border: #063c6a;
+
+    /* Tip admonition */
+    --tip-bg: #1e8812;
+    --tip-title-bg: #166210;
+    --tip-border: #3f9504;
+
+    /* fallback admonition */
+    --generic-bg: #545454;
+    --generic-title-bg: #2c2c2c;
+    --generic-border: #6a6a6a;
+
+    /* Code blocks */
+    --code-bg: #062e06f1;
+    --block-background: var(--code-bg);
+    --code-scroll-bg: #3236319c;
+
+    --h1-border: #b5b5b56b;
+    --h2-border: var(--h1-border);
+
+    /* Text */
+    --text-colour: #e1e1e1;
+    --link-text: #67a20d;
+    --link-hover: darkgrey;
+    --link-active: lightgrey;
+    --quote: #d0f7b92b;
+
+    /* Blinking caret */
+    --caret: #73b60d;
+
+    /* footer heart */
+    --heart-color: #c5425b;
+}
+
+body.dark-theme img {
+    filter: brightness(.8) contrast(1.2);
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        --bg-color: #042406;
+        --blog-title: #87a085;
+
+        /* Danger admonition */
+        --danger-bg: #ffa6825e;
+        --danger-title-bg: #e88181;
+        --danger-border: #c78692;
+
+        /* Warning admonition */
+        --warning-bg: #ffe9a8;
+        --warning-title-bg: #ffbe5f;
+        --warning-border: #c9a76e;
+
+        /* Note admonition */
+        --note-bg: #0b82a9d4;
+        --note-title-bg: #005487;
+        --note-border: #063c6a;
+
+        /* Tip admonition */
+        --tip-bg: #e8f4ff;
+        --tip-title-bg: #4fa3d7;
+        --tip-border: #77b54c;
+
+        /* fallback admonition */
+        --generic-bg: #f0f0f0;
+        --generic-title-bg: #b5b5b5;
+        --generic-border: #adadad;
+
+        /* Code blocks */
+        --code-bg: #062e06f1;
+        --block-background: var(--code-bg);
+        --code-scroll-bg: #3236319c;
+
+        --h1-border: #b5b5b56b;
+        --h2-border: var(--h1-border);
+
+        /* Text */
+        --text-colour: #e1e1e1;
+        --link-text: #67a20d;
+        --link-hover: darkgrey;
+        --link-active: lightgrey;
+        --quote: #d0f7b92b;
+
+        /* Blinking caret */
+        --caret: #73b60d;
+
+        /* footer heart */
+        --heart-color: #c5425b;
+    }
+
+    img {
+        filter: brightness(.8) contrast(1.2);
+    }
+
+    body.light-theme {
+        --bg-color: #fbfff6;
+        --blog-title: #777573;
+
+        /* Danger admonition */
+        --danger-bg: #ffa6825e;
+        --danger-title-bg: #df6f6f;
+        --danger-border: #c78692;
+
+        /* Warning admonition */
+        --warning-bg: #ffe9a8;
+        --warning-title-bg: #f9a62b;
+        --warning-border: #e3a43a;
+
+        /* Note admonition */
+        --note-bg: #a2dbeeb5;
+        --note-title-bg: #72c6fa;
+        --note-border: #82b1d9;
+
+        /* Tip admonition */
+        --tip-bg: #d5f8cf;
+        --tip-title-bg: #4fd75f;
+        --tip-border: #64c125;
+
+        /* fallback admonition */
+        --generic-bg: #f0f0f0;
+        --generic-title-bg: #8a8a8a;
+        --generic-border: #adadad;
+
+        /* Code blocks */
+        --code-bg: #f1f1f1f1;
+        --block-background: var(--code-bg);
+        --code-scroll-bg: #dae7d79c;
+
+        /* Text */
+        --text-colour: #3b3b3b;
+        --link-text: #67a20d;
+        --link-hover: darkgrey;
+        --link-active: lightgrey;
+        --quote: #d0f7b92b;
+
+        --h1-border: #d7d7d7;
+        --h2-border: var(--h1-border);
+
+        /* Blinking caret */
+        --caret: #73b60d;
+
+        /* footer heart */
+        --heart-color: #c5425b;
+    }
+
+    body.light-theme img {
+        filter: brightness(1) contrast(1);
+    }
+}
+
+@media (max-width: 500px) {
+  nav ul,
+  nav:active ul {
+    background: var(--bg-color);
+    border: 1px solid var(--h1-border);
+    right: 70px;
+    top: 60px;
+    width: auto;
+    border-radius: 4px 0 4px 4px;
+    z-index: 1;
+  }
+
+  nav:hover ul {
+    padding-top: 5px;
+  }
 }
 
 html {
@@ -47,6 +254,7 @@ body {
     width: 100%;
     height: 100vh;
     color: var(--text-colour);
+    background: var(--bg-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,6 +270,22 @@ header {
 	flex-wrap: wrap;
 }
 
+.theme-toggle {
+    background: none;
+    border: 1px hidden;
+    width: 3em;
+    border-radius: 1em;
+    font-size: larger;
+}
+
+.theme-moon {
+  text-shadow: -0.15em 0px 0.4em rgba(45,255,196,0.3);
+}
+
+.theme-toggle:hover {
+    border: 1px solid var(--text-colour);
+}
+
 .blog-name {
     display: flex;
     flex-wrap: wrap;
@@ -70,10 +294,10 @@ header {
     flex-direction: column;
     font-size: 20px;
     font-family: "Lucida Console", Monaco, monospace;
-	height: auto;
-	width: auto;
+    height: auto;
+    width: auto;
     text-decoration-line: none;
-    color: #777573;
+    color: var(--blog-title);
 }
 
 .blog-name:hover {
@@ -91,6 +315,14 @@ header {
         typing 1.25s steps(30, jump-none),
         blink-caret .75s step-end infinite;
     padding-right: 0.075em;
+}
+
+nav li:has(button) {
+  display: flex;
+}
+
+nav li button {
+	margin-right: 10px;
 }
 
 nav li a {
@@ -115,6 +347,14 @@ nav li a {
 .franklin-content blockquote {
     border-left: 7px solid var(--caret);
     background-color: var(--quote);
+}
+
+.franklin-content h1 {
+    border-bottom: 3px double var(--h1-border);
+}
+
+.franklin-content h2 {
+    border-bottom: 1px solid var(--h1-border);
 }
 
 blockquote > p {
@@ -288,12 +528,20 @@ pre > code::-webkit-scrollbar-track {
     content: ":"
 }
 
-table:not(.fndef) tr:first-of-type {
+.table tr:first-of-type {
 	background: var(--bg-color);
 }
 
+table tr:first-of-type {
+	background: var(--bg-color);
+}
+
+.franklin-content th {
+    border: 1px solid;
+}
+
 .franklin-content p + table.fndef {
-	border-top: 2px solid lightgrey;
+	border-top: 2px solid var(--text-colour);
 }
 
 .franklin-content table.fndef {
@@ -328,7 +576,7 @@ footer {
     color: #a6a2a0;
     text-align: center;
     margin-top: 6em;
-    border-top: 1px solid lightgrey;
+    border-top: 1px solid var(--h1-border);
     padding-top: 2em;
     margin-bottom: 4em;
     display: grid;
