--- a/_css/style.css
+++ b/_css/style.css
@@ -8,6 +8,7 @@
 body {
     --bg-color: #fbfff6;
     --blog-title: #777573;
+    --admonition-code: var(--code-bg);
 
     /* Danger admonition */
     --danger-bg: #ffa6825e;
@@ -63,6 +64,7 @@ img {
 body.dark-theme {
     --bg-color: #042406;
     --blog-title: #87a085;
+    --admonition-code: #7b7b7b8f;
 
     /* Danger admonition */
     --danger-bg: #541b05;
@@ -119,6 +121,7 @@ body.dark-theme img {
     body {
         --bg-color: #042406;
         --blog-title: #87a085;
+        --admonition-code: #7b7b7b8f;
 
         /* Danger admonition */
         --danger-bg: #ffa6825e;
@@ -174,6 +177,7 @@ body.dark-theme img {
     body.light-theme {
         --bg-color: #fbfff6;
         --blog-title: #777573;
+        --admonition-code: var(--code-bg);
 
         /* Danger admonition */
         --danger-bg: #ffa6825e;
@@ -462,6 +466,10 @@ pre > code::-webkit-scrollbar-track {
 .admonition {
     border-radius: 5px;
     margin: 1em 2em;
+}
+
+.admonition code {
+    background-color: var(--admonition-code);
 }
 
 .admonition-title {
