Fix broken feed links on article pages

--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,7 +1,7 @@
 <footer>
     <div id="meta">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}. {{isnotpage /tag/*}}Last modified: {{ fill fd_mtime }}.{{end}}
-    <a type="application/rss+xml" href="./feed.xml">
+    <a type="application/rss+xml" href="/feed.xml">
         <img src="/assets/rss.svg" alt="RSS Feed" class="rss-icon"/>
     </a>
     </div>
