Fix RSS feeds of tag pages

--- a/_layout/tag.html
+++ b/_layout/tag.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,13 +10,15 @@
   <link rel="icon" href="/assets/favicon.png">
   <title>Tag: {{fill fd_tag}}</title>
 </head>
+
 <body>
   {{insert header.html}}
   <div class="franklin-content">
     <h1>Tag: {{fill fd_tag}}</h1>
     {{custom_taglist}}
-    {{insert page_foot.html}}
+    {{insert tag_foot.html}}
   </div>
   {{ insert theme.html }}
 </body>
+
 </html>
